# multi-agent-starter-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  analysis_agent.py  report_agent.py  research_agent.py
docs/: architecture.md  quickstart.md
examples/: custom_agent.py  eval_demo.py  hitl_pipeline.py  pipeline.py
orchestrator/: __init__.py  base_agent.py  dag.py  eval.py  hitl.py  monitor.py  rag.py
tests/: test_eval.py  test_hitl.py  test_orchestrator.py  test_rag.py
