[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-starter-kit"
version = "0.1.0"
description = "Starter kit for building multi-agent AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
